adding pagination for search results and a back button as well

--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -47,7 +47,8 @@ UP UNTILL THE FOOTER --> #}
                         {% else %}
                             {{global.companyOverview}}
                         {% endif %}
-                                          
+                            {{entry.jobOverview}} 
+
                         {# JOB REQUIREMENTS #}
                         <div class="">
                             {% if entry.jobRequirements %}
