adding google ananlytics

--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -18,11 +18,20 @@
  {# BOX SLIDER CDN #}
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"> 
 
-{# Bootstrap Smart Menu #}
+  {# Bootstrap Smart Menu #}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.1.0/addons/bootstrap-4/jquery.smartmenus.bootstrap-4.css">
 
   {# Custom CSS #}
   <link rel="stylesheet" href="/styles/main.css">
 
   
+  {# Global site tag (gtag.js) - Google Analytics #}
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157717290-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157717290-1');
+  </script>
 
