--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -35,14 +35,26 @@
           {# DROPDOWN MENU #}
         {% set pages = craft.entries.section('navigation').all() %}
           <ul id="driver-tabs" class="dropdown-menu">
+        {% do setCookie('su_return', craft.app.request.getQueryStringWithoutPath(), now | date_modify("+1 hour").timestamp) %}
+          {% if getCookie('su_return') %}
               {% nav page in pages %}
-                      <a class="dropdown-item" class="d-block" href="/{{page.slug}}">{{page.slug}}</a> 
+               <a class="dropdown-item" class="d-block" href="/{{page.slug}}?{{getCookie('su_return')}}">{{page.slug}}</a> 
                       {% ifchildren %}
                           <ul class="dropdown list-style-none">
-                              {% children %}
+                              {% children %}?{{getCookie('su_return')}}
                           </ul>
                       {% endifchildren %}
               {% endnav %}
+          {% else %}
+              {% nav page in pages %}
+               <a class="dropdown-item" class="d-block" href="/{{page.slug}}">{{page.slug}}</a> 
+                 {% ifchildren %}
+                   <ul class="dropdown list-style-none">
+                    {% children %}
+                   </ul>
+                    {% endifchildren %}
+              {% endnav %}
+          {% endif %}                     
           </ul>
 
       </div>     
