--- a/templates/jobs/searchjobs/search-controller.twig
+++ b/templates/jobs/searchjobs/search-controller.twig
@@ -3,12 +3,12 @@
       <div class="row">
           <div class="col-8 offset-2">
             {# SET COOKIES #}
-            {% if getCookie('su_return') %}
+            {# {% if getCookie('su_return') %}
                 {% set myCookie = getCookie('su_return') %}
                 <form action="{{ url('jobs/searchjobs/results')}} ">
-            {% else %}
+            {% else %} #}
               <form action="{{ url('jobs/searchjobs/results') }}">
-            {% endif %}
+            {# {% endif %} #}
                   {# TOP ROW #}
                   <div class="row">
                       {# Select Truck Type #}
