--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -38,10 +38,14 @@
   });
 </script>
 
+
+
+
 <!-- Custom JQuery -->
 <script src="/scripts/shortform.js"></script>
 <script src="/scripts/sticky-nav.js"></script>
 <script src="/scripts/general-search.js"></script>
+<script src="/scripts/cookie.js"></script>
 
 
 </body>
