--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -45,6 +45,9 @@
 <script src="/scripts/shortform.js"></script>
 <script src="/scripts/sticky-nav.js"></script>
 <script src="/scripts/general-search.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
+
 <script src="/scripts/cookie.js"></script>
 
 
