adding LZ's code

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -6,7 +6,7 @@
   
   {# utility-site-container is a utility class located in utility SCSS folder #}
   <div class="utility-site-container">
-  <body class="container-fluid p-0 utility-site-content">
+  <body class="container-fluid p-0 utility-site-content" onload="ReadCookie()">
     
 
 {% include "partials/_nav" %}
