taking craft cookies out

--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -47,7 +47,7 @@
 <script src="/scripts/general-search.js"></script>
 
 
-<script src="/scripts/cookie.js"></script>
+{# <script src="/scripts/cookie.js"></script> #}
 
 
 </body>
