--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -33,48 +33,116 @@
 {# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE ENTRY PAGE 
 UP UNTILL THE FOOTER --> #}
 {% block main %}
-{# WE ADD THE utility CLASS TO MAKE TO CONTENT GO ALL THE WAY DOWN #}
-<div class="container-fluid pt-5 pb-1 jobs-index utility-site-content">
-    <div class="row p-4">
-        <div class="col-sm-8 offset-sm-2 col-md-8 bg-light p-2">
-            <div class="row">
-                <div class="col-sm-12 col-md-10 offset-md-1">
+<div id="jobs-entry">
+  {# PARRALLAX #}
+<div class="text-center text-md-right pb-5" id="jobs-entry__parrallax">
+    <div class="container">
+      <div class="row">
+        {# PARRALLAX HEADER #}
+        <div class="p-5 mx-auto mx-md-0 ml-md-auto col-10 col-md-7 ">
+          <h3 class="h1 text-white">OTR Truck Driving Job In Nashville, TN</h3>
+          <p class="mb-3 lead text-white">Of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-                    <div class="container pt-2">
-                    {# Company Overview #}
-                        {% if entry.jobOverview %}
-                            {{entry.jobOverview}} 
-                        {% else %}
-                            {{global.companyOverview}}
-                        {% endif %}
-                            {{entry.jobOverview}} 
+ {# main row here #}
+  <div class="mb-5" style="">
+    <div class="container" id="jobs-entry__details">
+      <div class="row negative-margin-row">
+        {# Left side, details, tabs etc #}
+        <div class="col-md-8 tabs-column" style="">
+          <div class="card text-left" style="">
+            <div class="card-header">
+              <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" data-target="#tabone">Job Details</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link"  data-toggle="tab" data-target="#tabtwo">Requirements</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" data-toggle="tab" data-target="#tabthree">Company Overview</a>
+                </li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <div class="tab-content mt-2">
+                <div class="tab-pane fade" id="tabone" role="tabpanel">
+                  <p class="">When I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms.</p>
+                  <p class="">Paragraph. Then, my friend, when darkness overspreads my eyes, and heaven and earth seem to dwell in my soul and absorb its power, like the form of a beloved mistress, then I often think with longing.</p>
+                </div>
 
-                        {# JOB REQUIREMENTS #}
-                        <div class="">
+                {# JOB REQUIREMENTS #}
+                <div class="tab-pane fade" id="tabtwo" role="tabpanel">
+                         <div class="">
                             {% if entry.jobRequirements %}
-                                {{entry.jobRequirements}}
+                                <p class="">{{entry.jobRequirements}}</p>
                             {% else %}
-                                {{global.jobRequirements}}
+                                <p class="">{{global.jobRequirements}}</p>
                             {% endif %}
                         </div>
-
-
-
-                        {% if entry.jobApplicationLink %}
-                            <a class="btn btn-lg btn-success d-block mx-auto" href="{{entry.jobApplicationLink}}{{global.rValue}}" >Apply Now!!</a> 
-                        {% else %}
-                            <a class="btn btn-lg btn-success d-block mx-auto" href="{{global.jobApplicationLink}}{{global.rValue}}" >Apply Now!!</a> 
-                        {% endif %}                                    
-
-                    </div>
-                        <div class="container pt-5 text-center">
-                        <a class="btn text-danger" href="/jobs">Back to jobs</a>
-                        </div>
-                                           
                 </div>
+                {# Company Overview #}
+                <div class="tab-pane fade active show" id="tabthree" role="tabpanel">
+                    {% if entry.jobOverview %}
+                           <p class="">{{entry.jobOverview}}</p>
+                        {% else %}
+                           <p class="">{{global.companyOverview}}</p>
+                        {% endif %}
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+        {# Right Side, apply banner etc #}
+        <div class="col-md-4" style="">
+          <div class="row py-2 mx-auto applyBanner " style="">
+            <div class="col-md-12">
+              <h3 class="">How can I get this job?</h3>
+              <p class="lead">We've made it easy to apply. Fill out a simple application to get started. We can have you on the road in no time.</p>
+               {% if entry.jobApplicationLink %}
+        <a class="btn btn-success btn-block" href="{{entry.jobApplicationLink}}">I WANT TO APPLY</a>
+                {% else %}
+        <a class="btn btn-success btn-block" href="{{global.jobApplicationLink}}">I WANT TO APPLY</a>
+                {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 
+
+
+{# VIDEO AND MORE CONTENT #}
+  <div class="pb-5">
+    <div class="container">
+      <div class="row">
+        {# left video container #}
+        <div class="col-md-6">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/q_N7telJgRA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        </div>
+        {# right content container #}
+        <div class="col-md-6">
+          <h1 class="display-4" style="">ABC is second to none for professional truck drivers.</h1>
+          <p class="">Paragraph. Then, my friend, when darkness overspreads my eyes, and heaven and earth seem to dwell in my soul and absorb its power, like the form of a beloved mistress, then I often think with longing.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5 callToActionBanner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="display-4">Take the next step in advancing your driving career. Join ABC now.</h1><a class="btn btn-primary" href="#">I WANT THIS JOB</a>
+        </div>
+      </div>
+    </div>
+  </div>
+{# end jobs entry #}
+</div>
 {% endblock %}
