--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -16,36 +16,26 @@
       </div>
     </div>
   </div>
-  {# Bottom half of nav #}
-  <div class="container-fluid" id="nav-bottom">
-    <div class="row">
-      <div class="col-sm-12 col-md-8 offset-md-2">
-        <img src="/images/conversion-logo.png" alt="">
-        <a href="#" class="dropdown" id="driver-tab-trigger">
-       {# Get the requested category slug from the URL #}
-          {% set slug = craft.app.request.getSegment(1) %}    
-            {% if slug %}            
-              {{ slug }}
-            {% else %}
-            Company Driver   
-            {% endif %}         
-        {# Company Driver&nbsp; #}        
-        <i class="fas fa-chevron-down"></i></a>
+  
+<div class="container-fluid bg-danger" id="bottom-nav">
+<div class="container">
+    <ul class="list-inline mb-0">
+    {% set pages = craft.entries.section('navigation').all() %}
+      {% nav page in pages %}
+        <li class="list-inline-item" data-target="#carouselExampleIndicators" data-slide-to="0"><a href="/{{page.slug}}">
 
-          {# DROPDOWN MENU #}
-        {% set pages = craft.entries.section('navigation').all() %}
-          <ul id="driver-tabs" class="dropdown-menu">    
-              {% nav page in pages %}
-               <a class="dropdown-item" class="d-block" href="/{{page.slug}}">{{page.slug}}</a> 
-                 {% ifchildren %}
-                   <ul class="dropdown list-style-none">
-                    {% children %}
-                   </ul>
-                    {% endifchildren %}
-              {% endnav %}
-          </ul>
+          {% if page.slug == "otr" %}
+            <i class="jumbo__icon fas fa-road"></i>                      
+          {% elseif page.slug  == "local" %}
+            <i class="jumbo__icon fas fa-briefcase"></i> 
+          {% elseif page.slug  == "ltl" %}
+            <i class="jumbo__icon fas fa-route"></i>            
+          {% endif %}
 
-      </div>     
-    </div>
-  </div>   
+          {{page.slug}}</a></li>       
+        {% endnav %}
+
+    </ul>
+</div>
+</div>
 </div>
