testing the title

--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -40,7 +40,7 @@ UP UNTILL THE FOOTER --> #}
       <div class="row">
         {# PARRALLAX HEADER #}
         <div class="p-5 mx-auto mx-md-0 ml-md-auto col-10 col-md-7 ">
-          <h3 class="h1 text-white">OTR Truck Driving Job In Nashville, TN</h3>
+          <h3 class="h1 text-white">{{entry.title}}</h3>
           <p class="mb-3 lead text-white">Of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
         </div>
       </div>
