adding video section

--- a/SCSS/sections/jobs/_jobs-entry.scss
+++ b/SCSS/sections/jobs/_jobs-entry.scss
@@ -33,4 +33,17 @@
             color: #fff;
         }
     }
+
+    .job-video-container{
+        .left-video{
+            background-color: #fff;
+        }
+        .right-video{
+            background-color: #dc3545;
+            color: #fff;
+            h1{
+            //  font-weight: 400;   
+            }           
+        }
+    }
 }
