--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -76,13 +76,11 @@ UP UNTILL THE FOOTER --> #}
 
                 {# JOB REQUIREMENTS #}
                 <div class="tab-pane fade" id="tabtwo" role="tabpanel">
-                         <div class="">
                             {% if entry.jobRequirements %}
                                 <p class="">{{entry.jobRequirements}}</p>
                             {% else %}
                                 <p class="">{{global.jobRequirements}}</p>
                             {% endif %}
-                        </div>
                 </div>
                 {# Company Overview #}
                 <div class="tab-pane fade active show" id="tabthree" role="tabpanel">
@@ -118,18 +116,18 @@ UP UNTILL THE FOOTER --> #}
 
 {# VIDEO AND MORE CONTENT #}
   <div class="pb-5">
-    <div class="container">
+    <div class="container job-video-container">
       <div class="row">
         {# left video container #}
-        <div class="col-md-6">
+        <div class="col-md-6 p-0 left-video">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/q_N7telJgRA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
         {# right content container #}
-        <div class="col-md-6">
-          <h1 class="display-4" style="">ABC is second to none for professional truck drivers.</h1>
-          <p class="">Paragraph. Then, my friend, when darkness overspreads my eyes, and heaven and earth seem to dwell in my soul and absorb its power, like the form of a beloved mistress, then I often think with longing.</p>
+        <div class="col-md-6 right-video">
+          <h1 class="display-4">ABC is second to none for professional truck drivers.</h1>
+          <p>Paragraph. Then, my friend, when darkness overspreads my eyes, and heaven and earth seem to dwell in my soul and absorb its power, like the form of a beloved mistress, then I often think with longing.</p>
         </div>
       </div>
     </div>
