--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -289,6 +289,13 @@ footer {
   background-color: #707070;
   color: #fff; }
 
+#jobs-entry .job-video-container .left-video {
+  background-color: #fff; }
+
+#jobs-entry .job-video-container .right-video {
+  background-color: #dc3545;
+  color: #fff; }
+
 #shortform {
   display: flex; }
 
