--- a/SCSS/sections/partials/_nav.scss
+++ b/SCSS/sections/partials/_nav.scss
@@ -34,10 +34,11 @@
 
     // UPDATED bottom NAV
     #bottom-nav {
-        // position: absolute;
+        position: absolute;
         z-index: 100;
-        left: 50%;
-        // transform: translateX(-50%);
+        // left: 50%;
+        transform: translateX(50%);
+        width: 50%;
         ul {
             display: flex;
             justify-content: space-evenly;
@@ -65,7 +66,7 @@
 
 
 // Extra small devices (portrait phones, less than 345px)
-@media (max-width: 345px) {
+@media (max-width: 500px) {
     #nav-container {
         position: relative;
         // TOP HALF OF NAVIGATION
@@ -78,11 +79,44 @@
                 }
             }
         }
-    }
+        #bottom-nav {
+            position: absolute;
+            z-index: 100;
+            // left: 0;
+            transform: translateX(0%);
+            width: 100% !important;
+        }
+    }   
 }
 
+// larg phones and tablets (portrait phones, less than 345px)
+@media (min-width: 501px) and (max-width: 900px) {
+    #nav-container {
+        position: relative;
+        // TOP HALF OF NAVIGATION
+        #nav-top {
+            ul {
+                li {
+                    a {
+                        font-size: 1em;
+                    }
+                }
+            }
+        }
+        #bottom-nav {
+            position: absolute;
+            z-index: 100;
+            // left: 0;
+            transform: translateX(20%);
+            width: 75% !important;
+        }
+    }   
+}
+
+
+
 // // Small devices (landscape phones, 576px and up)
-// @media (min-width: 576px) and (max-width: 767.98px) { ... }
+// @media (min-width: 357px) and (max-width: 767.98px) {  }
 
 // // Medium devices (tablets, 768px and up)
 // @media (min-width: 768px) and (max-width: 991.98px) { ... }
