--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -23,8 +23,10 @@
       display: none;
       text-align: center; }
   #nav-container #bottom-nav {
+    position: absolute;
     z-index: 100;
-    left: 50%; }
+    transform: translateX(50%);
+    width: 50%; }
     #nav-container #bottom-nav ul {
       display: flex;
       justify-content: space-evenly;
@@ -41,11 +43,27 @@
           margin: 0 auto;
           text-align: center; }
 
-@media (max-width: 345px) {
+@media (max-width: 500px) {
   #nav-container {
     position: relative; }
     #nav-container #nav-top ul li a {
-      font-size: 1em; } }
+      font-size: 1em; }
+    #nav-container #bottom-nav {
+      position: absolute;
+      z-index: 100;
+      transform: translateX(0%);
+      width: 100% !important; } }
+
+@media (min-width: 501px) and (max-width: 900px) {
+  #nav-container {
+    position: relative; }
+    #nav-container #nav-top ul li a {
+      font-size: 1em; }
+    #nav-container #bottom-nav {
+      position: absolute;
+      z-index: 100;
+      transform: translateX(20%);
+      width: 75% !important; } }
 
 .jumbo {
   position: relative; }
