--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -6,8 +6,9 @@
       <div class="col-sm-12 col-md-8 offset-md-2">
         <ul>
           <li><i class="fas fa-phone"></i> &nbsp; <strong>Call for</strong></li>
+          <li> <img src="/images/conversion-logo.png" alt=""></li>
           <li><a href="#" id="search-trigger"><i class="fas fa-search"></i>&nbsp; <strong>Search</strong></a></li>
-          <li><i class="fas fa-circle"></i><a href="#"> &nbsp;Apply Now</a></li>
+          {# <li><i class="fas fa-circle"></i><a href="#"> &nbsp;Apply Now</a></li> #}
         </ul>
         <form class="form-inline" id="general-search"  action ="{{url('search/results')}}"> 
           <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
