--- a/SCSS/sections/partials/_nav.scss
+++ b/SCSS/sections/partials/_nav.scss
@@ -20,6 +20,9 @@
                     color: gray;
                     font-size: 1.2em;
                 }
+                img{
+                    height: 1.2rem;
+                }
             }
             #seach-trigger {
                 color: #fff !important;
