--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -39,7 +39,7 @@ UP UNTILL THE FOOTER --> #}
     <div class="container">
       <div class="row">
         {# PARRALLAX HEADER #}
-        <div class="p-5 mx-auto mx-md-0 ml-md-auto col-10 col-md-7 ">
+        <div class="p-5 mx-auto mx-md-0 ml-md-auto col-10 col-md-7 job-title-container">
           <h3 class="h1 text-white">{{entry.title}}</h3>
           <p class="mb-3 lead text-white">Of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
         </div>
