--- a/SCSS/sections/partials/_nav.scss
+++ b/SCSS/sections/partials/_nav.scss
@@ -1,131 +1,21 @@
-#nav-container {
-    position: relative;
 
-    // TOP HALF OF NAVIGATION
-    #nav-top {
-        background-color: #373737;
-        min-height: 75px;
-        ul {
-            padding: 0;
-            display: flex;
-            justify-content: space-between;
-            transform: translateY(70%);
-            li {
-                display: inline;
-                color: #fff;
-                .fa-phone {
-                    color: green;
-                }
-                a {
-                    color: gray;
-                    font-size: 1.2em;
-                }
-                img{
-                    height: 1.2rem;
-                }
-            }
-            #seach-trigger {
-                color: #fff !important;
-            }
-        }
-        #general-search {
-            padding: 20px !important;
-            display: none;
-            text-align: center;
-        }
+#main-nav {
+    background: #dc3545;
+
+    img {
+        height: 2rem;     
     }
 
-    // UPDATED bottom NAV
-    #bottom-nav {
-        position: absolute;
-        z-index: 100;
-        // left: 50%;
-        transform: translateX(50%);
-        width: 50%;
+    #navbar10 {
         ul {
-            display: flex;
-            justify-content: space-evenly;
-            padding: 1rem;
-    
             li {
-                width: 100%;
-                display: flex;
-                justify-content: center;
-            }
-    
-            a {
-                color: white;
                 font-size: 1.2rem;
-                .jumbo__icon {
-                    display: block;
-                    margin: 0 auto;
-                    text-align: center;
+                margin: 0 15px !important;
+
+                a {
+                    color: #fff;
                 }
             }
         }
     }
-
 }
-
-
-// Extra small devices (portrait phones, less than 345px)
-@media (max-width: 500px) {
-    #nav-container {
-        position: relative;
-        // TOP HALF OF NAVIGATION
-        #nav-top {
-            ul {
-                li {
-                    a {
-                        font-size: 1em;
-                    }
-                }
-            }
-        }
-        #bottom-nav {
-            position: absolute;
-            z-index: 100;
-            // left: 0;
-            transform: translateX(0%);
-            width: 100% !important;
-        }
-    }   
-}
-
-// larg phones and tablets (portrait phones, less than 345px)
-@media (min-width: 501px) and (max-width: 900px) {
-    #nav-container {
-        position: relative;
-        // TOP HALF OF NAVIGATION
-        #nav-top {
-            ul {
-                li {
-                    a {
-                        font-size: 1em;
-                    }
-                }
-            }
-        }
-        #bottom-nav {
-            position: absolute;
-            z-index: 100;
-            // left: 0;
-            transform: translateX(20%);
-            width: 75% !important;
-        }
-    }   
-}
-
-
-
-// // Small devices (landscape phones, 576px and up)
-// @media (min-width: 357px) and (max-width: 767.98px) {  }
-
-// // Medium devices (tablets, 768px and up)
-// @media (min-width: 768px) and (max-width: 991.98px) { ... }
-
-// // Large devices (desktops, 992px and up)
-// @media (min-width: 992px) and (max-width: 1199.98px) { ... }
-
-// // Extra large devices (large desktops, 1200px and up)
-// @media (min-width: 1200px) { ... }
