--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -1,42 +1,28 @@
-{# {% include "search/index" %} #}
-<div class="container-fluid p-0" id="nav-container">
-  {# Top half of nav #}
-  <div class="container-fluid" id="nav-top">
-    <div class="row">
-      <div class="col-sm-12 col-md-8 offset-md-2">
-        <ul>
-          <li><i class="fas fa-phone"></i> &nbsp; <strong>Call for</strong></li>
-          <li> <img src="/images/conversion-logo.png" alt=""></li>
-          <li><a href="#" id="search-trigger"><i class="fas fa-search"></i>&nbsp; <strong>Search</strong></a></li>
-          {# <li><i class="fas fa-circle"></i><a href="#"> &nbsp;Apply Now</a></li> #}
-        </ul>
-        <form class="form-inline" id="general-search"  action ="{{url('search/results')}}"> 
-          <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
+<nav class="navbar navbar-expand-md navbar-dark sticky-top" id="main-nav">
+  <div class="container"> <a class="navbar-brand" href="/">
+      {# <i class="fa d-inline fa-lg fa-stop-circle"></i> #}
+      <img src="/images/conversion-logo.png" alt="">
+    </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
+      data-target="#navbar10">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar10">
+      <ul class="navbar-nav ml-auto">
+        {% set pages = craft.entries.section('navigation').all() %}
+        {% nav page in pages %}
+        <li class="list-inline-item" data-target="#carouselExampleIndicators" data-slide-to="0"><a
+            href="/{{page.slug}}">
+            {% if page.slug == "otr" %}
+            <i class="jumbo__icon fas fa-road"></i>
+            {% elseif page.slug  == "local" %}
+            <i class="jumbo__icon fas fa-briefcase"></i>
+            {% elseif page.slug  == "ltl" %}
+            <i class="jumbo__icon fas fa-route"></i>
+            {% endif %}
+            {{page.slug}}</a></li>
+        {% endnav %}
+        <li>{% include "search/index" %}</li>
+      </ul>
     </div>
   </div>
-  
-<div class="container-fluid bg-danger" id="bottom-nav">
-<div class="container">
-    <ul class="list-inline mb-0">
-    {% set pages = craft.entries.section('navigation').all() %}
-      {% nav page in pages %}
-        <li class="list-inline-item" data-target="#carouselExampleIndicators" data-slide-to="0"><a href="/{{page.slug}}">
-
-          {% if page.slug == "otr" %}
-            <i class="jumbo__icon fas fa-road"></i>                      
-          {% elseif page.slug  == "local" %}
-            <i class="jumbo__icon fas fa-briefcase"></i> 
-          {% elseif page.slug  == "ltl" %}
-            <i class="jumbo__icon fas fa-route"></i>            
-          {% endif %}
-
-          {{page.slug}}</a></li>       
-        {% endnav %}
-
-    </ul>
-</div>
-</div>
-</div>
+</nav>
