--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,71 +1,12 @@
-#nav-container {
-  position: relative; }
-  #nav-container #nav-top {
-    background-color: #373737;
-    min-height: 75px; }
-    #nav-container #nav-top ul {
-      padding: 0;
-      display: flex;
-      justify-content: space-between;
-      transform: translateY(70%); }
-      #nav-container #nav-top ul li {
-        display: inline;
-        color: #fff; }
-        #nav-container #nav-top ul li .fa-phone {
-          color: green; }
-        #nav-container #nav-top ul li a {
-          color: gray;
-          font-size: 1.2em; }
-        #nav-container #nav-top ul li img {
-          height: 1.2rem; }
-      #nav-container #nav-top ul #seach-trigger {
-        color: #fff !important; }
-    #nav-container #nav-top #general-search {
-      padding: 20px !important;
-      display: none;
-      text-align: center; }
-  #nav-container #bottom-nav {
-    position: absolute;
-    z-index: 100;
-    transform: translateX(50%);
-    width: 50%; }
-    #nav-container #bottom-nav ul {
-      display: flex;
-      justify-content: space-evenly;
-      padding: 1rem; }
-      #nav-container #bottom-nav ul li {
-        width: 100%;
-        display: flex;
-        justify-content: center; }
-      #nav-container #bottom-nav ul a {
-        color: white;
-        font-size: 1.2rem; }
-        #nav-container #bottom-nav ul a .jumbo__icon {
-          display: block;
-          margin: 0 auto;
-          text-align: center; }
-
-@media (max-width: 500px) {
-  #nav-container {
-    position: relative; }
-    #nav-container #nav-top ul li a {
-      font-size: 1em; }
-    #nav-container #bottom-nav {
-      position: absolute;
-      z-index: 100;
-      transform: translateX(0%);
-      width: 100% !important; } }
-
-@media (min-width: 501px) and (max-width: 900px) {
-  #nav-container {
-    position: relative; }
-    #nav-container #nav-top ul li a {
-      font-size: 1em; }
-    #nav-container #bottom-nav {
-      position: absolute;
-      z-index: 100;
-      transform: translateX(20%);
-      width: 75% !important; } }
+#main-nav {
+  background: #dc3545; }
+  #main-nav img {
+    height: 2rem; }
+  #main-nav #navbar10 ul li {
+    font-size: 1.2rem;
+    margin: 0 15px !important; }
+    #main-nav #navbar10 ul li a {
+      color: #fff; }
 
 .jumbo {
   position: relative; }
