more refactoring home page

--- a/SCSS/sections/partials/index.scss
+++ b/SCSS/sections/partials/index.scss
@@ -1,6 +1,6 @@
 @import '_nav.scss';
-@import '_jumbo.scss';
-@import '_banner.scss';
+@import '_parallax.scss';
+@import '_indexCards.scss';
 @import '_summary.scss';
 @import '_video.scss';
 @import '_jobs-benefits.scss';
