--- a/templates/index.twig
+++ b/templates/index.twig
@@ -30,30 +30,52 @@
 {# UP UNTILL THE FOOTER --> #}
 {% block main %}
 
-{# JUMBOTRON #}
-<div class="container-fluid p-0 jumbo">
-    <div class="img-row"></div>
-    <div class="row heading-row">
-        <div class="col-sm-12 col-md-6 offset-md-3" id="blur-bg">
-            <h1 class="homeHeadline">{{entry.homeHeadline}}</h1>
-            <h4 class="subHeadline">{{entry.subHeadline}}</h4>
-            <div class="row p-2 button_row">
-                <div class="col-sm-12 col-md-6 pt-3">             
-                    <a href="/forms" onclick="app(this.href):return false;" class="btn btn-lg btn-success"> <i class="fas fa-plus"></i> Apply Now</a>                        
-                </div>
-                        {# search jobs #}
-                <div class="col-sm-12 col-md-6 pt-3">    
-                    <a href="/jobs" class="btn btn-lg btn-secondary"><i class="fas fa-search"></i> Search Jobs</a>
-                </div>
-            </div>
+<!-- PARALLAX -->
+  <div class="text-center text-md-right pb-5 parallax">
+    <div class="container">
+      <div class="row">
+        <div class="p-5 mx-auto mx-md-0 ml-md-auto col-8 col-md-7">
+          <h3 class="h1 text-white">OTR Truck Driving Job In Nashville, TN</h3>
+          <p class="mb-3 lead text-white">Of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
         </div>
+      </div>
     </div>
-</div>
+  </div>
 
-{# BANNER IMAGE #}
-<div class="container-fluid p-0" id="banner">
-    <img class="img-fluid" src="/images/banner.png" alt="">
-</div>
+<!--CARDS-->
+  <div class="pb-5 bg-light" style="">
+    <div class="container indexCards">
+      <div class="row pb-2">
+        <div class="col-md-4" style="">
+          <div class="row py-2 mx-auto" style="">
+            <div class="col-md-12">
+              <h3 class="text-secondary"><i class="fa fa-fw fa-user"></i>Company Drivers</h3>
+              <p class="lead">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.</p><a class="btn btn-info btn-sm" href="#"><i class="fa fa-fw fa-arrow-circle-o-right"></i><i class="fa fa-fw fa-truckz"></i>Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4" style="">
+          <div class="row py-2 mx-auto" style="">
+            <div class="col-md-12">
+              <h3 class="text-secondary"><i class="fa fa-fw fa-truck"></i>Owner Operators</h3>
+              <p class="lead">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.</p><a class="btn btn-info btn-sm" href="#"><i class="fa fa-fw fa-arrow-circle-o-right"></i><i class="fa fa-fw fa-truckz"></i>Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 applyBannerColumn" style="">
+          <div class="row applyBanner py-2 mx-auto" style="">
+            <div class="col-md-12">
+              <h3 class="" contenteditable="true"><i class="fa fa-fw fa-search"></i>Find Your Next Job</h3>
+              <p class="lead" style="">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.<br></p><a class="btn btn-block btn-lg btn-success" href="#"><i class="fa fa-fw fa-search"></i><i class="fa fa-fw fa-truckz"></i>FIND MY NEXT JOB</a>
+              <h5 class="pt-3">NEED TO TALK? Call a recruiter now. 888-888-8888</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 
 {# SUMMARY HEADLINE #}
