--- a/templates/search/index.twig
+++ b/templates/search/index.twig
@@ -1,4 +1,4 @@
    <form class="form-inline my-2 my-lg-0" action ="{{url('search/results')}}">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Search Now">Search</button>
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit" value="Search Now">Search</button>
     </form>
